tests/expectations/compiler/function/unit_parameter_fail.out
Error [ETYC0372123]: The unit type () may appear only as the return type of a function.
    --> compiler-test:3:5
     |
   3 |     x: (),
     |     ^^^^^
Error [ETYC0372123]: The unit type () may appear only as the return type of a function.
    --> compiler-test:8:13
     |
   8 |     fn main(x: ()) {}
     |             ^^^^^
Error [ETYC0372123]: The unit type () may appear only as the return type of a function.
    --> compiler-test:10:14
     |
  10 |     fn other(x: [(); 2]) {}
     |              ^^^^^^^^^^
Error [ETYC0372123]: The unit type () may appear only as the return type of a function.
    --> compiler-test:12:25
     |
  12 |     fn yet_another() -> [(); 2] {}
     |                         ^^^^^^^
Error [ETYC0372036]: Function must return a value.
    --> compiler-test:12:5
     |
  12 |     fn yet_another() -> [(); 2] {}
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
